# sopti

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.svn  README  TODO  check_new_semester.pl  configure.ac  constraint.hpp  course.hpp  dbloader.cpp  error.cpp  globals.hpp  group.cpp  group.hpp  legende_cours_poly.txt  main.cpp  main.hpp  make_message.c  make_message.h  make_teachers_csv.sh  objective.hpp  parser_prof.cpp  period.hpp  read_csv.cpp  schoolcourse.cpp  schoolcourse.hpp  schoolschedule.cpp  schoolschedule.hpp  sopti.conf.example  stdsched.cpp  studentschedule.cpp  studentschedule.hpp  uepoch.h  update_courses_xml.sh  update_data.sh
CVSROOT/: modules
data/: closed.csv  update
db/: empty.sql  updatedb.pl
deploy/: retrieve
emailer/: configuration.py  emailer.conf.example  emailer.py  logging_emailer.py  md5crypt.py  notifications.sql
sopti/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.sunos  README  TODO  configfile.cpp  configfile.hpp  configure.ac  constraint.hpp  dbloader.hpp  error.cpp  globals.hpp  group.cpp  group.hpp  group_constraint.hpp  legende_cours_poly.txt  main.cpp  main.hpp  make_message.c  make_message.h  make_teachers_csv.sh  objective.hpp  period.hpp  read_csv.cpp  schedule.hpp  schoolcourse.cpp  schoolcourse.hpp  schoolschedule.cpp  schoolschedule.hpp  sopti.conf.example  sopti.cpp  sopti.hpp  stdsched.cpp  stdsched.h  studentschedule.cpp  studentschedule.hpp  update_courses_xml.sh
sopti/data/: courses.csv  update  update_smb
sopti/db/: empty.sql  updatedb.pl
sopti/emailer/: emailer.conf.example  emailer.py  logging_emailer.py
sopti/stats/: frequent_hosts.sh  plot_hosts_day.txt  stats.gnuplot  stats_day.gnuplot
sopti/stats/analog_out/: index.html
sopti/web/: NEWS  aep.css  config.php.example  email_form.php  email_unsubscribe.php  index.html  index.php  lib.php  listcourses.php  make.css  make.php  make_form1.php  make_form2.php  room.php  room_form.php  sopti.css  teacher_form.php
src/: configfile.cpp  configfile.hpp  constraint.hpp  dbloader.cpp  dbloader.hpp  error.hpp  getopt.h  globals.hpp  make_message.c  objective.hpp  read_csv.hpp  schoolcourse.hpp  studentschedule.cpp
stats/: analog.cfg  analog.html  analog_dnscache  count.txt  count2analog.sh  count_analog.txt  extract.sh  extract_day.sh  get_count_txt  plot_hosts_cumul_day.txt  plot_hosts_per_hour.txt  plot_reqs_cumul_day.txt  plot_reqs_day.txt  plot_reqs_per_hour.txt  reverse.sh  stats.sh  stats_day_png.gnuplot  stats_png.gnuplot
stats/3dgraph/: data.txt  get_data.sh  graph.gnuplot  make_graph.sh
web/: NEWS  _head.php  _main_navbar.php  config.php.example  courses_wick_data.php  email_form.php  email_unsubscribe.php  index.html  index.php  lib.php  listcourses.css  listcourses.php  make.css  make.php  make_form.php  make_form1.php  make_form2.php  room.php  room_form.php  sopti.css  styles.css  teacher.php  teacher_form.php  wick.js
web/lib/: templates.php
web/templates/generator/: steps.php
web/templates/shared/: head.php  main_navbar.php  main_sidebar.php
